Add numpy security issue fixes

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party=SageMakerPipelineConstructs,SageMakerPipelineSourceCode,aws_cdk,boto3,botocore,constructs,data_pipeline,digital_twin,joblib,numpy,pandas,pipelines,pytest,quantile_regression,river,sagemaker,scipy,setuptools,sklearn,tqdm
+known_third_party=DigitalTwin,SageMakerPipelineSourceCode,aws_cdk,boto3,botocore,constructs,digital_twin,joblib,numpy,optuna,pandas,pipelines,pytest,quantile_regression,sagemaker,scikeras,scipy,setuptools,sklearn,tensorflow
